add fixes to page

--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <title>Russ</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>Russ page</title>
   </head>
   <body>
 
     <h1>WELCOME TO RUSS'S PAGE</h1>
-      <img src="C:\Users\epicodus\desktop\car-show\russ.jpg" alt="russ" class="img-responsive img-rounded">
-    <div style="color: red">
-    <h2>list of projects created on Github</h2>
+      <img src="img/russ.jpg" alt="russ" class="img-responsive img-rounded">
+    <div>
+    <h2  class="header2">list of projects created on Github</h2>
     </div>
-    <ul>
+
+    <div class="myGoal">
     <ol>
+      <li>Left</li>
+      <li>right</li>
+      <li>straight</li>
+    </ol>
+    </div>
+
+    <ul>
        <li>my first webpage</li>
          <a href="https://github.com/russvetsper/my-first-webpage-/blob/master/my-first-webpage.html">First-webpage</a>
        <li>dog</li>
          <a href="https://github.com/russvetsper/dog">Dog-webpage</a>
        <li>crow</li>
         <a href="https://github.com/russvetsper/crow">Crow-webpage</a>
-    </o>
      </ul>
+
      <div style="color: orange">
      <h3>About me'</h3>
      </div>
@@ -41,8 +51,10 @@
           <li>Great people skills</li>
         </ul>
      </div>
-
-
+     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+       <!-- Include all compiled plugins (below), or include individual files as needed -->
+       <script src="js/bootstrap.min.js"></script>
 
 
   </body>
