add float and pull

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Russ page</title>
   </head>
   <body>
-    <h1>WELCOME TO RUSS'S PAGE</h1>
+    <h1 <div class="pull-right">WELCOME TO RUSS'S PAGE</div></h1>
     <div>
       <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
